woker/mynginx-svc01.yaml
apiVersion: v1
kind: Service
metadata:
  name: mynginx01-clusterip
  namespace: default
spec:
  type: NodePort
  selector:
    app: nginx-k8s-node01
  ports:
  - name: http
    port: 80
    targetPort: 80
