woker/mynginx-svc02.yaml
apiVersion: v1
kind: Service
metadata:
  name: mynginx02-clusterip
  namespace: default
spec:
  type: NodePort
  selector:
    app: nginx-k8s-node02
  ports:
  - name: http
    port: 80
    targetPort: 80
