woker/mytomcat-svc01.yaml
apiVersion: v1
kind: Service
metadata:
  name: tomcat-svc01
spec:
  clusterIP: None  # 将clusterIP设置为None，即可创建headliness Service
  selector:
    name: tomcat01
