woker/mytomcat-svc02.yaml
apiVersion: v1
kind: Service
metadata:
  name: tomcat-svc02
spec:
  clusterIP: None  # 将clusterIP设置为None，即可创建headliness Service
  selector:
    name: tomcat02
