woker/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: www.web01.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mynginx01-clusterip
            port:
              number: 80
  - host: www.other.com
    http:
      paths:
      - path: /web02
        pathType: Prefix
        backend:
          service:
            name: mynginx02-clusterip
            port:
              number: 80
