woker/ingress01.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx01-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: www.web01.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mynginx01-clusterip
            port:
              number: 80
